--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.0",
+    "@material-ui/core": "^4.4.2",
+    "apollo-boost": "^0.4.4",
+    "formik": "^1.5.8",
+    "formik-material-ui": "0.0.22",
+    "graphql": "^14.5.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
