--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.0",
     "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.11.3",
     "apollo-boost": "^0.4.4",
     "formik": "^1.5.8",
     "formik-material-ui": "0.0.22",
